--- a/list.jade
+++ b/list.jade
@@ -11,14 +11,14 @@ block content
       a(href='project_1.html') Проект 1
     li
       a(href='project_2.html') Проект 2
-    //li
-    //  a(href='.html') 
-    //li
-    //  a(href='.html') 
-    //li
-    //  a(href='.html') 
-    //li
-    //  a(href='.html') 
+    li
+      a(href='news.html') Новости
+    li
+      a(href='news_page.html') Новость
+    li
+      a(href='publications.html') Публикации
+    li
+      a(href='publication.html') Публикация
     //li
     //  a(href='.html') 
     //li
