--- a/partials/projects/projects.jade
+++ b/partials/projects/projects.jade
@@ -14,5 +14,5 @@
         a.overlay(href='#')
         .slot
         .title
-          .typo_mh.vam ПРОФОРИЕНТАЦИОННЫЙ ПРОЕКТ
+          .typo_mh.vam профнавигационный ПРОЕКТ
           .vam_helper
