--- a/news_page.jade
+++ b/news_page.jade
@@ -2,7 +2,7 @@ extend layout/base
 
 block content
   include partials/header
-  .b_promo.m_little(style='background-image: url(/images/promo_1.png)')
+  .b_promo.m_little(style='background-image: url(images/promo_1.png)')
     .b_layout
       .typo_sh.vam НОВОСТи
       .vam_helper
@@ -10,7 +10,7 @@ block content
     .b_layout
       .pure-g
         section.pure-u-17-24
-          img(src='/images/news_page.png')
+          img(src='images/news_page.png')
           .title
             .typo_sh РНФ ОПределил победителей конкурса на финансирование проектов научных лабораторий
           p.stats 
