--- a/partials/header.jade
+++ b/partials/header.jade
@@ -2,7 +2,7 @@ header.b_layout
   .pure-g
     .pure-u-7-24
       a.b_logo(href='#')
-        img(src='/images/logo.png')
+        img(src='images/logo.png')
     .pure-u-17-24
       ul.b_main_menu
         li
