--- a/publications.jade
+++ b/publications.jade
@@ -2,7 +2,7 @@ extend layout/base
 
 block content
   include partials/header
-  .b_promo.m_little(style='background-image: url(/images/promo_1.png)')
+  .b_promo.m_little(style='background-image: url(images/promo_1.png)')
     .b_layout
       .typo_sh.vam публикации
       .vam_helper
