--- a/layout/base.jade
+++ b/layout/base.jade
@@ -3,12 +3,12 @@ html
   head
     title fii_fond
     meta(charset='utf-8')
-    link(rel='stylesheet', href='/css/application.css')
+    link(rel='stylesheet', href='css/application.css')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:300,400,100&subset=latin,cyrillic')
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
   body
     block content
-    script(src='/coffee/lib/jquery.min.js')
-    script(src='/coffee/application.js')
+    script(src='coffee/lib/jquery.min.js')
+    script(src='coffee/application.js')
