--- a/partials/index/promo_1.jade
+++ b/partials/index/promo_1.jade
@@ -1,4 +1,4 @@
-.b_promo(style='background-image: url(/images/promo_1.png)')
+.b_promo(style='background-image: url(images/promo_1.png)')
   .b_layout
     .typo_hl.vam РАСШИРЯЯ ГРАНИЦЫ<br>ВАШЕГО БИЗНЕСА
     .vam_helper
