--- a/partials/news/news.jade
+++ b/partials/news/news.jade
@@ -3,7 +3,7 @@
     .pure-u-1-3
       .b_news
         a.overlay(href='#')
-        img(src='/images/news_1.png')
+        img(src='images/news_1.png')
         p.typo_t РНФ ОПРЕДЕЛИЛ ПОБЕДИТЕЛЕЙ КОНКУРСА НА ФИНАНСИРОВАНИЕ ПРОЕКТОВ НАУЧНЫХ ЛАБОРАТОРИЙ
         p
           small 11 декабря 2014
@@ -17,7 +17,7 @@
     .pure-u-1-3
       .b_news
         a.overlay(href='#')
-        img(src='/images/news_2.png')
+        img(src='images/news_2.png')
         p.typo_t ФИНАНСИРОВАНИЕ ПРОЕКТОВ НАУЧНЫХ ЛАБОРАТОРИЙ
         p
           small 11 декабря 2014
