--- a/publication.jade
+++ b/publication.jade
@@ -2,6 +2,6 @@ extend layout/base
 
 block content
   include partials/header
-  .b_promo.m_little(style='background-image: url(/images/promo_1.png)')
+  .b_promo.m_little(style='background-image: url(images/promo_1.png)')
     .b_layout
   include partials/footer
