--- a/less/partials/base/typo.less
+++ b/less/partials/base/typo.less
@@ -1,6 +1,6 @@
 @b_color: #777;
 @a_color: #22232c;
-@h_color: red;
+@h_color: #faaf31;
 
 
 body {
@@ -43,4 +43,7 @@ a {
 }
 p {
   margin: 0 0 14px;
+  &.center {
+    text-align: center;
+  }
 }
