--- a/list.jade
+++ b/list.jade
@@ -19,14 +19,14 @@ block content
       a(href='publications.html') Публикации
     li
       a(href='publication.html') Публикация
-    //li
-    //  a(href='.html') 
-    //li
-    //  a(href='.html') 
-    //li
-    //  a(href='.html') 
-    //li
-    //  a(href='.html') 
+    li
+      a(href='publication_1.html') Публикация 1
+    li
+      a(href='contacts.html') Контакты
+    li
+      a(href='about.html') О фонде
+    li
+      a(href='faces.html') Лица
     //li
     //  a(href='.html') 
     //li
