--- a/partials/header.jade
+++ b/partials/header.jade
@@ -8,7 +8,7 @@ header.b_layout
         li
           a(href='#') О фонде
         li
-          a(href='#') Проекты
+          a.active(href='#') Проекты
         li
           a(href='#') Новости
         li
