--- a/layout/base.html
+++ b/layout/base.html
@@ -9,9 +9,11 @@
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
     -->
+    <script src="//maps.google.com/maps/api/js?sensor=true"></script>
   </head>
   <body>
     <script src="coffee/lib/jquery.min.js"></script>
+    <script src="coffee/lib/gmaps.js"></script>
     <script src="coffee/application.js"></script>
   </body>
 </html>
