--- a/layout/base.jade
+++ b/layout/base.jade
@@ -8,7 +8,9 @@ html
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+    script(src='//maps.google.com/maps/api/js?sensor=true')
   body
     block content
     script(src='coffee/lib/jquery.min.js')
+    script(src='coffee/lib/gmaps.js')
     script(src='coffee/application.js')
